[tool:pytest]
addopts=--cov=pynats2 --cov-report html
testpaths=tests

[metadata]
name = pynats2
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
summary ='Thread based NATS client for Python 3',

description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = https://github.com/yosshy/pynats2
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    nats
    message bus

[files]
packages =
    pynats2
